# minrl

./: .gitignore  LICENSE  README.md  pyproject.toml
minrl/: grpo.py  model.py  tokenizer.py  trainer.py  utils.py
minrl/modeling/: lora.py
minrl/tasks/: countdown.py
scripts/: benchmark.py  generate.py  train_grpo.py
test/: test_qwen2.py  test_qwen3.py
